# iftcl-translator

./: Cargo.toml  README.md
src/: dictionary.json  lib.rs  main.rs
tests/: tests.rs
