[package]
name = "iftcl-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
once_cell = "1.17.2"
clap = { version = "4.3.1", features = ["derive"] }
eyre = "0.6.8"